; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_rtl.c_test_RtlDeleteTimer.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_rtl.c_test_RtlDeleteTimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STATUS_INVALID_PARAMETER_1 = common dso_local global i64 0, align 8
@STATUS_INVALID_PARAMETER = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [73 x i8] c"expected STATUS_INVALID_PARAMETER_1 or STATUS_INVALID_PARAMETER, got %x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_RtlDeleteTimer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_RtlDeleteTimer() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 @pRtlDeleteTimer(i32* null, i32* null, i32* null)
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* %1, align 8
  %4 = load i64, i64* @STATUS_INVALID_PARAMETER_1, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %10, label %6

6:                                                ; preds = %0
  %7 = load i64, i64* %1, align 8
  %8 = load i64, i64* @STATUS_INVALID_PARAMETER, align 8
  %9 = icmp eq i64 %7, %8
  br label %10

10:                                               ; preds = %6, %0
  %11 = phi i1 [ true, %0 ], [ %9, %6 ]
  %12 = zext i1 %11 to i32
  %13 = load i64, i64* %1, align 8
  %14 = call i32 @ok(i32 %12, i8* getelementptr inbounds ([73 x i8], [73 x i8]* @.str, i64 0, i64 0), i64 %13)
  ret void
}

declare dso_local i64 @pRtlDeleteTimer(i32*, i32*, i32*) #1

declare dso_local i32 @ok(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
